[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0.40"
sha2 = "0.10.9"
base64 = "0.22.1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
bb8 = "0.8"
bb8-redis = "0.12"
redis = { version = "0.25", features = ["tokio-comp"] }
rdkafka = { version = "0.36", features = ["tokio"] }